# miuraos

./: CMakeLists.txt  limine.cfg
arch/x86_64/: CMakeLists.txt  linker.ld
arch/x86_64/include/miura/: boot.hpp  serial.hpp
arch/x86_64/src/miura/: boot.cpp  serial.cpp
kernel/: CMakeLists.txt
kernel/include/miura/device/memory/: memory.hpp  physical_memory.hpp  virtual_memory.hpp
kernel/src/device/memory/: physical_memory.cpp
